# deep-poker-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
doc/: trinal_clip_ppo.md
src/: main.rs
src/agent/: agent_network.rs  agent_pool.rs  agent_random.rs  mod.rs  tournament.rs
src/game/: action.rs  action_state.rs  hand_state.rs  mod.rs  player.rs  state.rs  state_chance.rs  state_data.rs  state_play.rs  state_terminal.rs  table.rs  tree.rs
src/game/tree/: mod.rs  play.rs  state.rs  state_chance.rs  state_data.rs  state_play.rs  state_terminal.rs
src/helper/: mod.rs
src/model/: actor_network.rs  adam_optimizer.rs  critic_network.rs  fake_model.rs  mod.rs  poker_network.rs  siamese_network.rs  siamese_network_conv.rs  siamese_network_linear.rs  trainer.rs  trainer_config.rs  trinal_clip_ppo_loss.rs
