[package]
name = "deep-poker"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.4.0", features = ["cuda"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.4.0", features = ["cuda"] }
colored = "2.1.0"
poker = "0.5.0"
rand = "0.8.5"
itertools = "0.10.0"
threadpool = "1.8.1"
num_cpus = "1.16.0"
indicatif = "0.17.8"
